removed ${CMAKE_SOURCE_DIR}/ from install(DIRECTORY ${CMAKE_SOURCE_DIR}/src/main/cpp/com/sandflow DESTINATION include FILES_MATCHING PATTERN "*.h")
as the source directory is by default the starting directory referenced by CMake

--- a/regxmllib/CMakeLists.txt
+++ b/regxmllib/CMakeLists.txt
@@ -46,4 +46,4 @@ endforeach( UNIT_TEST_PATH ${UNIT_TESTS} )
 #target_link_libraries(AUIDTest regxmllibc)
 #add_test(AUIDTest AUIDTest)
 
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/src/main/cpp/com/sandflow DESTINATION include FILES_MATCHING PATTERN "*.h")
+install(DIRECTORY src/main/cpp/com/sandflow DESTINATION include FILES_MATCHING PATTERN "*.h")
