--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 script:
   - mkdir regxmllib/build
   - cd regxmllib/build
-  - ccmake ..
+  - cmake .
   - cmake --build .
   - ctest .
   
