Fix build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 script:
   - mkdir regxmllib/build
   - cd regxmllib/build
-  - cmake .
+  - cmake ..
   - cmake --build .
   - ctest .
   
