--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ matrix:
         - sudo apt-get install libhamcrest-java
       script:
         - cd regxmllib
-        - ant test -lib /usr/share/java
+        - ant -lib /usr/share/java test
