Add install to Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
         - cmake ..
         - cmake --build .
         - ctest .
+        - sudo make install
       
     - language: java
       install:
