--- a/regxmllib/build.xml
+++ b/regxmllib/build.xml
@@ -235,6 +235,7 @@
         <genreffile samplename="indirect"/>
         <genreffile samplename="utf8_embedded_text"/>
         <genreffile samplename="class14"/>
+        <genreffile samplename="escape-chars"/>
         
         <!-- Delete the temp dir -->
         
