--- a/regxmllib/pom.xml
+++ b/regxmllib/pom.xml
@@ -4,7 +4,7 @@
  
     <groupId>com.sandflow</groupId>
     <artifactId>regxmllib</artifactId>
-    <version>1.1.2-rc2-SNAPSHOT</version>
+    <version>1.1.2</version>
     <packaging>jar</packaging>
     
     <properties>
