Added memory leak checks to travis script Fixed KLVStream memory leaks (#129) Fixed misc memory leaks (#130)

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ matrix:
         apt:
           packages:
             - libxerces-c-dev
+            - valgrind
             
       script:
         - mkdir regxmllib/build
@@ -12,6 +13,7 @@ matrix:
         - cmake ..
         - cmake --build .
         - ctest .
+        - ctest -T memcheck .
         - sudo make install
       
     - language: java
