--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,13 +1,13 @@
 name: Test
 
-on:
-  push:
-  pull_request:
+on: [push, pull_request]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
+
+    if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'pull_request'
 
     steps:
     - name: Checkout repo
