--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,6 +10,8 @@ jobs:
     if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'pull_request'
 
     steps:
+    - name: install dependencies
+      run: sudo apt install libxerces-c-dev
     - name: Checkout repo
       uses: actions/checkout@v3
     - name: Set up JDK 8
