--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,25 +3,36 @@ name: Test
 on: [push, pull_request]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-
+  JavaBuild:
+    name: Test regxmllibJ
     if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java-version: [11, 17, 21]
+
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v3
+    - name: Set up a JDK
+      uses: actions/setup-java@v3
+      with:
+        java-version: ${{ matrix.java-version }}
+        distribution: 'corretto'
+        cache: maven
+    - name: Test Java
+      run: mvn test
+
+  cpp_build:
+    name: Test regxmllibC
+    if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
 
     steps:
     - name: install dependencies
       run: sudo apt install libxerces-c-dev
     - name: Checkout repo
       uses: actions/checkout@v3
-    - name: Set up JDK 8
-      uses: actions/setup-java@v3
-      with:
-        java-version: '8'
-        distribution: 'corretto'
-        cache: maven
-    - name: Test Java
-      run: mvn test
     - name: Test C++
       run: |
         cmake -B build
