--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <packaging>jar</packaging>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <com.sandflow.config.dir>${basedir}/src/main/config</com.sandflow.config.dir>
         <com.sandflow.resources.dir>${basedir}/src/main/resources</com.sandflow.resources.dir>
