--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,7 +50,7 @@ jobs:
       uses: actions/checkout@v3
     - name: build xerces
       run: |
-        git clone https://github.com/xerces/xerces-c.git --depth 1
+        git clone https://github.com/apache/xerces-c.git --depth 1
         cd xerces-c
         mkdir build
         cd build
